--- a/style.css
+++ b/style.css
@@ -13,7 +13,22 @@ body {
   /* Padding bottom by footer height */
   padding-bottom: 80px;
 }
-
+.image-cropper {
+  width: 200px;
+  height: 200px;
+  position: right;
+  /* overflow: hidden; */
+  border-radius: 50%;
+  display:inline-block;
+  margin: 10 auto;
+}
+.doctor {
+  display: center;
+  margin: 0 auto;
+  margin-left:200%; /*centers the image*/
+  height: auto;
+  width: 180px;
+}
 #footer {
   position: absolute;
   bottom: 0;
@@ -22,10 +37,11 @@ body {
   padding-top: 20px;
   padding-bottom: 40px;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: aquamarine;
 }
 
 #footer p {
   margin: 0;
   font-size: 16px;
+  color: black;
 }
